@startuml

title __PROTOCOL's Class Diagram__\n

  namespace client.protocol {
    class client.protocol.MissileDeadMsg {
        - hitTank : boolean
        - id : int
        - msgType : int
        - tankId : int
        + MissileDeadMsg()
        + MissileDeadMsg()
        + parse()
        + send()
    }
  }
  

  namespace client.protocol {
    class client.protocol.MissileNewMsg {
        - msgType : int
        + MissileNewMsg()
        + MissileNewMsg()
        + parse()
        + send()
    }
  }
  

  namespace client.protocol {
    interface client.protocol.Msg {
        {static} + MISSILE_DEAD_MESSAGE : int
        {static} + MISSILE_NEW_MESSAGE : int
        {static} + TANK_DEAD_MESSAGE : int
        {static} + TANK_MOVE_MSG : int
        {static} + TANK_NEW_MSG : int
        {abstract} + parse()
        {abstract} + send()
    }
  }
  

  namespace client.protocol {
    class client.protocol.TankDeadMsg {
        - msgType : int
        - tankId : int
        + TankDeadMsg()
        + TankDeadMsg()
        + parse()
        + send()
    }
  }
  

  namespace client.protocol {
    class client.protocol.TankMoveMsg {
        - id : int
        - msgType : int
        - x : int
        - y : int
        + TankMoveMsg()
        + TankMoveMsg()
        + parse()
        + send()
    }
  }
  

  namespace client.protocol {
    class client.protocol.TankNewMsg {
        - msgType : int
        + TankNewMsg()
        + TankNewMsg()
        + parse()
        + send()
    }
  }
  

  client.protocol.MissileDeadMsg .up.|> client.protocol.Msg
  client.protocol.MissileDeadMsg o-- client.client.TankClient : tc
  client.protocol.MissileNewMsg .up.|> client.protocol.Msg
  client.protocol.MissileNewMsg o-- client.bean.Missile : m
  client.protocol.MissileNewMsg o-- client.client.TankClient : tc
  client.protocol.TankDeadMsg .up.|> client.protocol.Msg
  client.protocol.TankDeadMsg o-- client.client.TankClient : tc
  client.protocol.TankMoveMsg .up.|> client.protocol.Msg
  client.protocol.TankMoveMsg o-- client.bean.Dir : dir
  client.protocol.TankMoveMsg o-- client.bean.Dir : ptDir
  client.protocol.TankMoveMsg o-- client.client.TankClient : tc
  client.protocol.TankNewMsg .up.|> client.protocol.Msg
  client.protocol.TankNewMsg o-- client.bean.Tank : tank
  client.protocol.TankNewMsg o-- client.client.TankClient : tc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
